# miningsuite

./: .gitignore  AudEnvelope.md  AudFilterbank.md  AudFluctuation.md  AudFlux.md  AudMfcc.md  AudPitch.md  AudRoughness.md  AudSpectrum.md  AudioMusic.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contents.m  GuidedTour.md  HowTo.md  LICENSE.txt  MiningSuite.md  MusAutocor.md  MusChromagram.md  MusGroup.md  MusKeystrength.md  MusSpectrum.md  PatMinr.md  PatOccurrence.md  ProjectHome.md  README.txt  SigAttackleap.md  SigAttackslope.md  SigAttacktime.md  SigAutocor.md  SigBeatspectrum.md  SigBrightness.md  SigCentroid.md  SigCepstrum.md  SigEntropy.md  SigEnvelope.md  SigEventdensity.md  SigFilterbank.md  SigFlatness.md  SigFlux.md  (+40 more)
+aud/: attackleap.m  attackslope.m  attacktime.m  brightness.m  decayleap.m  decayslope.m  decaytime.m  duration.m  envelope.m  eventdensity.m  events.m  filterbank.m  fluctuation.m  flux.m  mfcc.m  minr.m  param.m  paramstruct.m  pitch.m  pulseclarity.m  roughness.m  score.m  spectrum.m  tempo.m
+mus/: autocor.m  chromagram.m  display.m  group.m  hcdf.m  key.m  keysom.m  keystrength.m  majorness.m  midi2nmat.m  minr.m  modal.m  output.m  param.m  paramstruct.m  pianoroll.m  pitch.m  play.m  pulseclarity.m  score.m  sequence.m  spectrum.m  tempo.m  tonalcentroid.m
+pat/: analyze.m  closed.m  creatememory.m  cyclic.m  val2field.m  verbose.m
docs/phase0/orpheon-bootstrap/: README.md  bootstrap-local.sh  pyproject.toml
docs/phase0/orpheon-bootstrap/.github/workflows/: publish-pypi.yml
docs/phase0/orpheon-bootstrap/src/orpheon/: __init__.py
(+469 files in other folders)
